# houfin-range-model

./: .gitignore  README.md  pyproject.toml
config/: age_model_config.json  data_config.json  esk_desk_config.json  secrets.example.json
docs/: DATA_SOURCES.md  TACC.md  TEMPORAL.md
scripts/: aggregate_and_interpolate_bui.py  avonet_pipeline.py  bui_lowres.py  climate_climr.py  download_avonet.py  download_bbs.py  download_dataverse.py  download_dem.py  download_ebird.py  download_hyde.py  download_prism.py  download_soilgrids.py  download_zenodo.py  ebird_ingest.py  ebird_smooth_trial.py  extract_ocean_mask.py  ingest_bbs_data.py  ingest_bbs_init_check.py  ingest_model_data.py  nodata_inspect.py  prism_bui_smoothers.py  project_ebird  project_prism.py  run_desk.py  run_encoder.py  test_kernel_physics.py  test_path_features_single_year.py  validate_products.py  visualize_bbs_observed_spread.py  watermask.py  watermask_project.py
scripts/deprecated/: aggregate_and_interpolate_bui.py  download_prism.py  extract_ocean_mask.py  prism_bui_smoothers.py  project_prism.py  watermask_project.py
scripts/diagnostics/: ebird_ingest.py  ingest_bbs_init_check.py  nodata_inspect.py  watermask.py
scripts/experiments/: run_build_final_z_cube.py  run_esk.py  run_single_year_analysis.py
scripts/tacc/: 00_pipeline.slurm  00_preprocess_all.slurm  01_preprocess.slurm  02_climate.slurm  03_visualize.slurm  04_states.slurm  20_encoder.slurm  25_model_prep.slurm  30_model_map.slurm  31_model_viz.slurm  check_climr_cache.sh  download_all.sh  env.sh  gpu_monitor.sh  pipeline.sh  submit.sh  submit_climate.sh  submit_encoder.sh  submit_map.sh  submit_map_viz.sh  submit_model_prep.sh  submit_pipeline.sh  submit_preprocess.sh  submit_preprocess_all.sh  submit_states.sh  submit_visualize.sh  warm_climr.sh
scripts/validation/: test_kernel_physics.py  test_path_features_single_year.py
scripts/viz/: bui_lowres.py  encoder_diagnostics.py  hypothesis_scenarios.py  map_diagnostics.py  overlay_great_plains_ebird.py  quicklook_grids.py  raw_bbs_turnover.py  trend_diagnostics.py  trend_overlap.py  visualize_bbs_observed_spread.py  visualize_validate_spacetime.py
src/: config_utils.py  temporal.py
src/analysis/: analyze_svi.py  engine.py  plots.py  stats.py
src/community_encoder/: analyze_final_z_cube.py  build_final_z_cube.py  climate_vs_z_turnover.py  generate_z_gif.py  latent_interpreter.py  prism_bui_smoothers.py  sanity_check_Z.py  sanity_check_houfin_regression.py  urbanization_vs_z_turnover.py
src/community_encoder/analysis_2023/: __init__.py  analysis_utils.py  compare_esk_desk.py  config_utils.py  single_year_analysis.py
src/community_encoder/train_DESK/: __init__.py  covariate_io.py  desk_ruzicka_global_full_history.py  desk_training.py  ebird_cache.py  ebird_io.py  esk_kernel.py  esk_ruzicka_global.py  model_arch.py  spacetime_community.py  trend_community.py  validate_spacetime.py
src/community_encoder/train_DESK/deprecated/: __init__.py  spacetime_community.py
src/data/: __init__.py  masks.py
src/data/acquire/: avonet.py  bbs.py  climate_climr.R  climatena.py  dataverse.py  dem.py  ebird.py  hyde.py  prism.py  soilgrids.py  warm_climr_cache.R  zenodo.py
src/data/combine/: build_states.py  climate_io.py  model_inputs.py  states.py  streams.py
src/data/deprecated/: README.md
src/data/deprecated/acquire/: prism.py
src/data/deprecated/preprocess/: bui.py  ocean_mask.py  watermask.py
src/data/identify/: avonet.py  bbs_crosswalk.py  select_trend_community.py
src/data/preprocess/: bbs.py  bbs_abund.py  bbs_community.py  bbs_trend.py  bui.py  build_ref_grid.py  climate_grid.py  ebird.py  ebird_trend.py  elevation.py  hyde.py  land_mask.py  luh3.py  netcdf_grid.py  ocean_mask.py  prism.py  soilgrids.py  subcell_centroids.py
src/model/: age_fields.py  age_forward.py  age_priors.py  age_resume_hmc.py  age_resume_lbfgs.py  age_resume_svi_from_map.py  age_run_hmc.py  age_run_map.py  age_run_svi.py  build_kernels.py  build_path_features.py  checkpoints.py  data_loading.py  runtime_diagnostics.py
src/processing/: generate_all_path_features.py  ingest_model_data.py  regrid.py
src/range_limits_pymc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vis/: _age_vis_common.py  age_model_math.py  check_bbs_npz.py  check_ingested_data.py  visualize_advi_model.py  visualize_age_model.py  visualize_community_similarity.py  visualize_hmc_model.py
tests/: test_bbs_spacetime.py  test_build_ref_grid.py  test_checkpoints.py  test_climate_subgrid.py  test_desk_spatial.py  test_dispersal_physics.py  test_encoder_diagnostics.py  test_enrich_direction.py  test_kernel_contract.py  test_land_mask.py  test_map_diagnostics.py  test_model_inputs_guards.py  test_netcdf_grid.py  test_output_ema.py  test_regrid.py  test_soilgrids.py  test_streams.py  test_temporal.py  test_trend_community.py
