[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "houfin-range-model"
version = "0.1.0"
description = "Age-structured, spatially-explicit model of house-finch range expansion, fit with NumPyro/JAX."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dendropy>=5.0.8",
    "geopandas>=1.1.2",
    "imageio>=2.37.2",
    "jax[cuda11-cudnn82,cuda13]>=0.8.1",
    "jaxlib[cuda11-cudnn82]>=0.8.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "numpyro>=0.19.0",
    "optax>=0.2.7",
    "pandas>=2.3.3",
    "rasterio>=1.4.4",
    "requests>=2.32.5",
    "rioxarray>=0.20.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "torch>=2.9.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
