[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "houfin-range-model"
version = "0.1.0"
description = "Age-structured, spatially-explicit model of house-finch range expansion, fit with NumPyro/JAX."
readme = "README.md"
requires-python = ">=3.12"
# Core: data acquisition, preprocessing, geospatial I/O, analysis, plotting.
# No GPU / deep-learning deps live here, so this set installs on any platform
# (macOS included) and is enough to run the entire data pipeline locally
# (download_ebird, avonet_pipeline, project_*, ingest, plotting).
dependencies = [
    "dendropy>=5.0.8",
    "geopandas>=1.1.2",
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=17.0",
    "rasterio>=1.4.4",
    "requests>=2.32.5",
    "rioxarray>=0.20.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tqdm>=4.67",
    "xarray>=2025.12",
]

[project.optional-dependencies]
# The Bayesian age-structured model (NumPyro/JAX) and community-encoder
# training/ESK (PyTorch). CPU-capable but heavy; needed only to fit or train,
# not for the data pipeline.  Install with:  pip install -e ".[model]"
model = [
    "jax>=0.8.1",
    "numpyro>=0.19.0",
    "optax>=0.2.7",
    "torch>=2.9.1",
]
# GPU acceleration on Linux. The CUDA extra is Linux-only and is the reason the
# model deps cannot install on macOS; keep it opt-in. CUDA 12 is REQUIRED on our HPC
# target: TACC Lonestar6 A100 nodes carry CUDA-12 drivers, and the CUDA-13 wheels need
# a newer NVIDIA driver (r580+) than those nodes have. JAX is pinned to CUDA 12 via
# jax[cuda12] here; torch is pinned to the PyTorch CUDA-12.8 index in [tool.uv.sources]
# below -- its PyPI default wheel moved to CUDA 13 as of torch 2.13, so leaving torch
# unpinned lets a fresh resolve drift to cu13 and break on LS6.
#   uv sync --extra model --extra gpu   (or  pip install -e ".[model,gpu]")
gpu = [
    "jax[cuda12]>=0.8.1",
]
# Test runner (dev only). Install with:  uv pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Force torch to the PyTorch CUDA-12.8 wheels on Linux so a fresh resolve (uv lock /
# uv pip install) can't drift to torch's CUDA-13 default wheel, which won't run on the
# TACC Lonestar6 CUDA-12 driver. On non-Linux (macOS dev) torch falls back to the PyPI
# CPU wheel. Regenerate uv.lock after editing (`uv lock`), then `uv sync` on the target.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
